# openddl-parser

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  index.html  params.json
.clusterfuzzlite/: Dockerfile  build.sh  parser_fuzzer.cpp
.github/workflows/: cflite_pr.yml  cmake.yml  codeql.yml
code/: DDLNode.cpp  OpenDDLCommon.cpp  OpenDDLCommonTest.cpp  OpenDDLExport.cpp  OpenDDLParser.cpp  OpenDDLStream.cpp  Value.cpp
demo/: main.cpp
doc/: openddlparser_doc.cfg
doxygen_html/: _d_d_l_node_8h_source.html  _open_d_d_l_common_8h_source.html  _open_d_d_l_parser_8h_source.html  _open_d_d_l_parser_utils_8h_source.html  _value_8h_source.html  annotated.html  class_d_d_l_node-members.html  class_d_d_l_node.html  class_open_d_d_l_parser-members.html  class_open_d_d_l_parser.html  class_value-members.html  class_value.html  class_value_1_1_iterator-members.html  class_value_1_1_iterator.html  classes.html  dir_664a6a2d08e49cdcd8a3ae8785196245.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  index.html  struct_context-members.html  struct_context.html  struct_data_array_list-members.html  struct_data_array_list.html  struct_identifier-members.html  struct_identifier.html  struct_name-members.html  struct_name.html  struct_property-members.html  struct_property.html  struct_reference-members.html  struct_reference.html  struct_text-members.html  struct_text.html  struct_value_allocator-members.html  (+1 more)
include/openddlparser/: DDLNode.h  OpenDDLCommon.h  OpenDDLExport.h  OpenDDLParser.h  OpenDDLParserUtils.h  OpenDDLStream.h  TPoolAllocator.h  Value.h
test/: DDLNodeTest.cpp  OpenDDLCommonTest.cpp  OpenDDLDefectsTest.cpp  OpenDDLExportTest.cpp  OpenDDLIntegrationTest.cpp  OpenDDLParserTest.cpp  OpenDDLParserUtilsTest.cpp  OpenDDLStreamTest.cpp  OssFuzzTest.cpp  UnitTestCommon.h  ValueTest.cpp  main.cpp
test/TestData/: clusterfuzz-testcase-minimized-assimp_fuzzer-5161012492500992  clusterfuzz-testcase-minimized-assimp_fuzzer-5699047558742016
